--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>갓생시뮬레이터</title>
+  <title>갓생루틴</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>갓생시뮬레이터</header>
+  <header>갓생루틴</header>
   <nav>
     <button onclick="showPage('mission')" class="active" id="tab-mission">미션</button>
     <button onclick="showPage('calendar')" id="tab-calendar">달력</button>
